--- a/Hola2.html
+++ b/Hola2.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>Ejemplo de hola mundo html</title>
+<title>Ejemplo de hola mundo 2 html</title>
 </head>
 <body>
-hola mundo
+hola mundo 2
 </body>
 </html>
